swish-0.4.4
-64-bit support.
-Windows XP 'webtask' pane.
-Hebrew, Czech, Spanish, French and Turkish translations.

swish-0.4.2
-Explicitly prevent 64-bit installation.
-Fix bug where sessions couldn't be restored until Explorer restarted.
-Fix bug with non-ASCII Windows usernames.

swish-0.4.1
-Write speeds 4x faster.
-Huge reduction in GUI memory usage.
-Confirmation before overwriting existing files.
-Improved write progress indicator.
-Better error reporting.
-Fix bug where 'Remove' option missing from host menu. 
-German translation.

swish-0.4.0
-Full support for files and directories with non-Latin Unicode names.

swish-0.3.5
-Display Unicode filenames.

swish-0.3.4
-Fixed hostname resolution for Windows versions earlier than Vista

swish-0.3.3
-IPv6 support.
-Window 7 fixes.
-Fix overwriting larger file with smaller one.
-Error messages when negotiating a connection fails.
-Support for most characters (e.g. @) in user names.

swish-0.3.2.0
-Internationalisation (English, Dutch, Russian)

swish-0.3.1.0
-Added host-key verification.
-New WIX-based installer

swish-0.3.0.1
-Added command buttons to add and remove hosts (Windows Vista and above).
-Allow the user to cancel a file transfer mid-file rather than only between
 files.
-Fix bug where password dialogues appear behind the Explorer window.
-Fix missing menu options bug in Windows 98.

swish-0.3.0.0
-Full drag-and-drop support in Windows XP and above.  Drag-and-drop files and
 folders to and from the remote server.

swish-0.2.1.13
-Enable removal of hosts from Swish folder.

swish-0.2.1.12
-Added 'Type' property to Explorer view.
-Fixed incorrect column witdths (ticket #2).
-Display user name and group name rather than the UID and GID.
-Added 'Owner ID' and 'Group ID' columns to Explorer view to display the
 numerical UID and GID.
-Added 'Date Accessed' column to Explorer view.

swish-0.2.1.11
-Read-only file transfer support added.  Files and folders can be copied from a